# brilliant-world-Agent

./: .env  README.md  main.py  requirements.txt
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: __init__.py  chat_agent.py  recommend_agent.py
app/config/: __init__.py  model_config.py  settings.py
app/core/agents/: __init__.py  chat_assistant_agent.py  post_recommend_agent.py
app/core/schemas/: chat.py  post.py  user.py
app/db/: __init__.py  milvus_client.py  postgres_client.py  redis_client.py
app/tasks/: behavior_tasks.py  vector_tasks.py  worker.py
app/utils/: __init__.py  embedding.py  logger.py  text_splitter.py
bw-vector-sync/: Dockerfile  README.md  pyproject.toml
bw-vector-sync/deploy/: config.md  k8s-deployment.yaml  k8s-service.yaml
bw-vector-sync/proto/: dual_write_event.proto
bw-vector-sync/reports/: junit.xml
bw-vector-sync/src/bw_vector_sync/: __init__.py  config.py  main.py  proto_decoder.py
bw-vector-sync/src/bw_vector_sync/consumer/: __init__.py  dlq_listener.py  post_listener.py  rabbit_consumer.py  user_listener.py
bw-vector-sync/src/bw_vector_sync/observability/: __init__.py  metrics.py  tracing.py
bw-vector-sync/src/bw_vector_sync/proto_gen/: __init__.py  dual_write_event_pb2.py
bw-vector-sync/src/bw_vector_sync/service/: __init__.py  health_server.py
bw-vector-sync/src/bw_vector_sync/writer/: __init__.py  idempotency_guard.py  milvus_writer.py
bw-vector-sync/tests/: conftest.py
docker/: .env.example  Dockerfile  docker-compose.yml
scripts/: __init__.py  init_milvus.py
(+5 files in other folders)
