[tool.poetry]
name = "bw-vector-sync"
version = "3.0.0"
description = "Python 消费者：消费 RabbitMQ 中的 MySQL→Milvus 双写事件并落库到 Milvus"
authors = ["brillian-world team"]
readme = "README.md"
packages = [{include = "bw_vector_sync", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
aio-pika = "^9.4"
pymilvus = "^2.4.4"
grpcio = "^1.62"
protobuf = "^4.25"
pydantic = "^2.7"
pydantic-settings = "^2.3"
redis = {extras = ["asyncio"], version = "^5.0"}
opentelemetry-api = "^1.25"
opentelemetry-sdk = "^1.25"
opentelemetry-exporter-otlp = "^1.25"
prometheus-client = "^0.20"
aiohttp = "^3.9"
tenacity = "^8.3"
structlog = "^24.1"
httpx = "^0.27"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
pytest-html = "^4.1"
fakeredis = "^2.23"
moto = {extras = ["awslambda"], version = "^5.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["src"]
markers = [
    "unit: 单元测试",
    "integration: 集成测试",
]
